--- a/src/global/g-def/funcs.styl
+++ b/src/global/g-def/funcs.styl
@@ -21,7 +21,7 @@
 $IMG = {}
 
 /**
- * Saves the specified image to thew global cache
+ * Saves the specified image to the global cache
  * @param {string} $img
  */
 img($img)
